# directory-templates

./: .gitignore
cpp-testing/: .gitignore  CMakeLists.txt
cpp-testing/src/: CMakeLists.txt  main.cpp
cpp-testing/testing/: CMakeLists.txt  testing_main.cpp
